<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.prasadini.styleomega.RegisterActivity">

    <ScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">


            <EditText
                android:id="@+id/username"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/prompt_username"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" />


            <EditText
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.277"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/re_password"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/prompt_re_password"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.277"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="150dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_firstName"
                android:inputType="textPersonName"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/re_password"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="150dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_lastName"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/firstName"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/nic"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/prompt_nic"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nic"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/prompt_contact"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/prompt_address"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/action_register"
                android:onClick="register"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <include layout="@layout/app_bar_main"/>
</android.support.constraint.ConstraintLayout>

