<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prasadini.styleomega.ManageAccountActivity">

     <ScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/app_bar_height"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_firstName"
                android:inputType="textPersonName"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_lastName"
                android:inputType="textPersonName"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/prompt_contact"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/prompt_address"
                android:inputType="textPostalAddress"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/action_update"
                android:onClick="modifyAccount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <include layout="@layout/app_bar_main" />
</android.support.constraint.ConstraintLayout>


