<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.prasadini.styleomega.SignInActivity">

    <include layout="@layout/app_bar_main"
        android:id="@+id/include3" />

            <EditText
                android:id="@+id/username"
                android:layout_width="316dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="57dp"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include3"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="316dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:hint="@string/action_sign_in"
                android:onClick="login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintHorizontal_bias="0.0" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:hint="@string/action_register"
                android:onClick="gotoRegister"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintHorizontal_bias="0.0" />

            <!--<Button
                android:id="@+id/btn_forgotPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/forgotpwd"
                android:onClick="gotoForgotPwd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />-->

</android.support.constraint.ConstraintLayout>

